# SaludTech-NoMonoliticos

./: Procesador Imagenes.postman_collection  README.md  anonimizador.Dockerfile  cd__notificador.Dockerfile  cd_anonimizador.Dockerfile  cd_clientes.Dockerfile  cd_notificador.Dockerfile  cd_procesador.Dockerfile  docker-compose.yml  notificador.Dockerfile  procesador.Dockerfile  pyproject.toml  requirements.txt
src/anonimizador/api/: __init__.py  anonimizador.py
src/anonimizador/config/: uow.py
src/anonimizador/modulos/anonimizador/aplicacion/: dto.py  mapeadores.py  servicios.py
src/anonimizador/modulos/anonimizador/dominio/: entidades.py  eventos.py  fabricas.py
src/anonimizador/modulos/anonimizador/infraestructura/: excepciones.py  fabricas.py  manejadores.py  mapeadores.py  modelos.py  repositorios.py
src/bff_web/: consumidores.py  despachadores.py  main.py
src/bff_web/api/v1/: consultas.py  esquemas.py  mutaciones.py
src/clients/api/: __init__.py  clientes.py
src/clients/seedwork/aplicacion/: queries.py
src/clients/seedwork/dominio/: repositorios.py
src/clients/seedwork/infraestructura/: uow.py
src/notificador/api/: __init__.py  notificador.py
src/saludtech/api/: __init__.py  anonimizador.py  app_anonimizador.py  app_notificador.py  app_procesador.py  image_blueprint.py  notificador.py  procesador.py  procesador_imagenes.py
src/saludtech/application/: image_service.py
src/saludtech/config/: db.py
src/saludtech/domain/: events.py  image.py
src/saludtech/infrastructure/: event_bus.py  repository.py
(+113 files in other folders)
